force-app/main/default/objects/Case/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>