force-app/main/default/objects/Case/fields/Comentario_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Comentario_de_Cierre__c</fullName>
    <label>Comentario de Cierre</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>