force-app/main/default/objects/Case/fields/Comentarios_Apertura__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Apertura__c</fullName>
    <label>Comentarios Apertura</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>