force-app/main/default/objects/Case/fields/Subtipo_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Subtipo_Reclamacion__c</fullName>
    <label>Subtipo Reclamación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X01</fullName>
                <label>Cliente reclama por la atención recibida</label>
            </value>
            <value>
                <fullName>X02</fullName>
                <label>Cliente reclama por usuario de acceso</label>
            </value>
            <value>
                <fullName>X03</fullName>
                <label>Cliente reclama algún concepto de su factura</label>
            </value>
            <value>
                <fullName>X04</fullName>
                <label>Certificado de lectura</label>
            </value>
            <value>
                <fullName>X05</fullName>
                <label>Solicitud de Duplicado Factura</label>
            </value>
            <value>
                <fullName>X06</fullName>
                <label>Contratos que no se facturan</label>
            </value>
            <value>
                <fullName>X07</fullName>
                <label>Rectificativas resol legal</label>
            </value>
            <value>
                <fullName>X08</fullName>
                <label>Cliente reclama su factura por incidencias en la gestión del contrato</label>
            </value>
            <value>
                <fullName>X09</fullName>
                <label>El cliente o el agente no puede descargar su factura</label>
            </value>
            <value>
                <fullName>X10</fullName>
                <label>Errores en el plan de cuota fija</label>
            </value>
            <value>
                <fullName>X11</fullName>
                <label>Cliente reclama por un pago no registrado</label>
            </value>
            <value>
                <fullName>X12</fullName>
                <label>Acuerdo de pago no delegado</label>
            </value>
            <value>
                <fullName>X13</fullName>
                <label>Cliente reclama porque le estamos pasando facturas que no son suyas</label>
            </value>
            <value>
                <fullName>X14</fullName>
                <label>Cliente reclama por un abono que no entiende/que no ha recibido</label>
            </value>
            <value>
                <fullName>X15</fullName>
                <label>Cliente quiere realizar el pago de una factura y el sistema no lo permite</label>
            </value>
            <value>
                <fullName>X16</fullName>
                <label>Cliente reclama la devolución de una entrega a cuenta</label>
            </value>
            <value>
                <fullName>X17</fullName>
                <label>Incidencias en el trámite de la contratación para empleados</label>
            </value>
            <value>
                <fullName>X18</fullName>
                <label>Cliente reclama que no se ha activado su contrato (errores imputables a Distribuidora)</label>
            </value>
            <value>
                <fullName>X19</fullName>
                <label>Gestion Admin Rechazos</label>
            </value>
            <value>
                <fullName>X20</fullName>
                <label>Reposición Contrato Energético</label>
            </value>
            <value>
                <fullName>X21</fullName>
                <label>Gestión Admin Mensajería</label>
            </value>
            <value>
                <fullName>X22</fullName>
                <label>Petición información adicional</label>
            </value>
            <value>
                <fullName>X23</fullName>
                <label>Cruce de Contratos</label>
            </value>
            <value>
                <fullName>X24</fullName>
                <label>Bajas error comercializadora</label>
            </value>
            <value>
                <fullName>X25</fullName>
                <label>Corte incorrecto por incidencia en la identificación del punto de suministro</label>
            </value>
            <value>
                <fullName>X26</fullName>
                <label>Cliente reclama por problemas con su contador</label>
            </value>
            <value>
                <fullName>X27</fullName>
                <label>Cliente solicita instalación de patrón para comprobar medida</label>
            </value>
            <value>
                <fullName>X28</fullName>
                <label>Cliente reclama daños en el medioambiente</label>
            </value>
            <value>
                <fullName>X29</fullName>
                <label>Cliente reclama por instalaciones de la red del distribuidor en mal estado</label>
            </value>
            <value>
                <fullName>X30</fullName>
                <label>Cliente reclama por baja calidad en suministro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>