force-app/main/default/objects/Case/fields/Tipo_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Reclamacion__c</fullName>
    <label>Tipo Reclamación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X01</fullName>
                <label>Atención al cliente</label>
            </value>
            <value>
                <fullName>X02</fullName>
                <label>Facturación</label>
            </value>
            <value>
                <fullName>X03</fullName>
                <label>Cobros</label>
            </value>
            <value>
                <fullName>X04</fullName>
                <label>Contratación (Distribuidora)</label>
            </value>
            <value>
                <fullName>X05</fullName>
                <label>Contratación (Comercializadora)</label>
            </value>
            <value>
                <fullName>X06</fullName>
                <label>Equipos de Medida</label>
            </value>
            <value>
                <fullName>X07</fullName>
                <label>Instalaciones del Distribuidor en mal estado</label>
            </value>
            <value>
                <fullName>X08</fullName>
                <label>Ventas</label>
            </value>
            <value>
                <fullName>X09</fullName>
                <label>Phishing</label>
            </value>
            <value>
                <fullName>X10</fullName>
                <label>Corte/Baja por Impago</label>
            </value>
            <value>
                <fullName>X11</fullName>
                <label>Consumo/Lectura</label>
            </value>
            <value>
                <fullName>X12</fullName>
                <label>Daños causados a cliente por el distribuidor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>