force-app/main/default/objects/Case/recordTypes/Caso_Reclamacion_Abierta.recordType-meta.xml
<RecordType>
    <fullName>Caso_Reclamacion_Abierta</fullName>
    <active>true</active>
    <businessProcess>Caso Reclamación</businessProcess>
    <label>Caso Reclamación Abierta</label>
</RecordType>