force-app/main/default/objects/Case/recordTypes/Caso_Reclamacion_Cerrada.recordType-meta.xml
<RecordType>
    <fullName>Caso_Reclamacion_Cerrada</fullName>
    <active>true</active>
    <businessProcess>Caso Reclamación</businessProcess>
    <label>Caso Reclamación Cerrada</label>
</RecordType>