force-app/main/default/objects/Case/listViews/Reclamaciones_Cerradas.listView-meta.xml
<ListView>
    <fullName>Reclamaciones_Cerradas</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Caso_Reclamacion_Cerrada</value>
    </filters>
    <label>Reclamaciones Cerradas</label>
</ListView>